--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 			name="description"
 			content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
 		/>
+
 		<link rel="stylesheet" href="./css/styles.css" />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<header class="header-bg">
