--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
 						para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
 					</p>
-					<a href="./bicicletas.html">Escolha a sua</a>
+					<a class="botao" href="./bicicletas.html">Escolha a sua</a>
 				</div>
 				<div class="introducao-imagem">
 					<img
