--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 				</div>
 			</div>
 		</main>
+
 		<article class="bicicletas-lista">
 			<h2 class="container font-1-xxl">
 				escolha a sua<span class="cor-p1">.</span>
@@ -84,6 +85,7 @@
 				</li>
 			</ul>
 		</article>
+
 		<article class="tecnologia-bg">
 			<div class="tecnologia container">
 				<div class="tecnologia-conteudo">
@@ -202,5 +204,45 @@
 				</div>
 			</div>
 		</article>
+
+		<footer class="footer-bg">
+			<div class="footer container">
+				<img src="./img/bikcraft.svg" alt="Bikcraft">
+				<div class="footer-contato">
+					<h3 class="font-2-l-b cor-0">Contato</h3>
+
+					<ul class="font-2-m cor-5">
+						<li><a href="tel:+552199999999">+55 21 9 9999-9999</a></li>
+						<li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+						<li>Rua Ali Perto, 32 - Botafogo</li>
+						<li>Rio de Janeiro - RJ</li>
+					</ul>
+
+					<div class="footer-redes">
+						<a href="./">
+							<img src="./img/redes/instagram.svg" alt="Instagram">
+						</a>
+						<a href="./">
+							<img src="./img/redes/facebook.svg" alt="Facebook">
+						</a>
+						<a href="./">
+							<img src="./img/redes/youtube.svg" alt="Youtube">
+						</a>
+					</div>
+				</div>
+				<div class="footer-informacoes">
+					<h3 class="font-2-l-b cor-0">Informaçoes</h3>
+					<nav>
+						<ul class="font-1-m cor-5">
+							<li><a href="./bicicletas.html">Bicicletas</a></li>
+							<li><a href="./seguros.html">Seguros</a></li>
+							<li><a href="./contato.html">Contato</a></li>
+							<li><a href="./termos.html">Termos e Condições</a></li>
+						</ul>
+					</nav>
+				</div>
+				<p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
+			</div>
+		</footer>
 	</body>
 </html>
