--- a/bicicletas.html
+++ b/bicicletas.html
@@ -9,6 +9,7 @@
 			content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
 		/>
 
+		<link rel="preload" href="./css/styles.css" as="style">
 		<link rel="stylesheet" href="./css/styles.css" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
