--- a/orcamento.html
+++ b/orcamento.html
@@ -9,6 +9,7 @@
 			content="Orçamentos Bikcraft"
 		/>
 
+		<link rel="preload" href="./css/styles.css" as="style">
 		<link rel="stylesheet" href="./css/styles.css" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
