--- a/seguros.html
+++ b/seguros.html
@@ -6,6 +6,7 @@
 		<title>Seguros | Bikcraft</title>
 		<meta name="description" content="Seguros da Bikcraft" />
 
+		<link rel="preload" href="./css/styles.css" as="style">
 		<link rel="stylesheet" href="./css/styles.css" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
