--- a/bicicletas.html
+++ b/bicicletas.html
@@ -23,7 +23,7 @@
 		<header class="header-bg">
 			<div class="header container">
 				<a href="./">
-					<img src="./img/bikcraft.svg" alt="Bikcraft" />
+					<img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
 				</a>
 
 				<nav aria-label="primaria">
@@ -60,13 +60,13 @@
 					</p>
 					<ul class="font-1-m cor-8">
 						<li>
-							<img src="./img/icones/eletrica.svg" alt="" />Motor Elétrico
+							<img src="./img/icones/eletrica.svg" width="32" height="32" alt="" />Motor Elétrico
 						</li>
 						<li>
-							<img src="./img/icones/carbono.svg" alt="" />Fibra de Carbono
+							<img src="./img/icones/carbono.svg" width="32" height="32" alt="" />Fibra de Carbono
 						</li>
-						<li><img src="./img/icones/velocidade.svg" alt="" />50 km/h</li>
-						<li><img src="./img/icones/rastreador.svg" alt="" />Rastreador</li>
+						<li><img src="./img/icones/velocidade.svg" width="32" height="32" alt="" />50 km/h</li>
+						<li><img src="./img/icones/rastreador.svg" width="32" height="32" alt="" />Rastreador</li>
 					</ul>
 					<a class="botao seta" href="./bicicletas/nimbus.html">Mais Sobre</a>
 				</div>
@@ -75,7 +75,7 @@
 			<div class="bicicletas-bg">
 				<div class="bicicletas container">
 					<div class="bicicletas-imagem">
-						<img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta" />
+						<img src="./img/bicicletas/magic.jpg" width="1120" height="680" alt="Bicicleta preta" />
 						<span class="font-2-m cor-0">R$ 2499</span>
 					</div>
 					<div class="bicicletas-conteudo">
@@ -87,14 +87,14 @@
 						</p>
 						<ul class="font-1-m cor-5">
 							<li>
-								<img src="./img/icones/eletrica.svg" alt="" />Motor Elétrico
+								<img src="./img/icones/eletrica.svg" width="32" height="32" alt="" />Motor Elétrico
 							</li>
 							<li>
-								<img src="./img/icones/carbono.svg" alt="" />Fibra de Carbono
+								<img src="./img/icones/carbono.svg" width="32" height="32" alt="" />Fibra de Carbono
 							</li>
-							<li><img src="./img/icones/velocidade.svg" alt="" />50 km/h</li>
+							<li><img src="./img/icones/velocidade.svg" width="32" height="32" alt="" />50 km/h</li>
 							<li>
-								<img src="./img/icones/rastreador.svg" alt="" />Rastreador
+								<img src="./img/icones/rastreador.svg" width="32" height="32" alt="" />Rastreador
 							</li>
 						</ul>
 						<a class="botao seta" href="./bicicletas/magic.html">Mais Sobre</a>
@@ -104,7 +104,7 @@
 
 			<div class="bicicletas container">
 				<div class="bicicletas-imagem">
-					<img src="./img/bicicletas/nebula.jpg" alt="Bicicleta preta" />
+					<img src="./img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bicicleta preta" />
 					<span class="font-2-m cor-0">R$ 3999</span>
 				</div>
 				<div class="bicicletas-conteudo">
@@ -116,13 +116,13 @@
 					</p>
 					<ul class="font-1-m cor-8">
 						<li>
-							<img src="./img/icones/eletrica.svg" alt="" />Motor Elétrico
+							<img src="./img/icones/eletrica.svg" width="32" height="32" alt="" />Motor Elétrico
 						</li>
 						<li>
-							<img src="./img/icones/carbono.svg" alt="" />Fibra de Carbono
+							<img src="./img/icones/carbono.svg" width="32" height="32" alt="" />Fibra de Carbono
 						</li>
-						<li><img src="./img/icones/velocidade.svg" alt="" />50 km/h</li>
-						<li><img src="./img/icones/rastreador.svg" alt="" />Rastreador</li>
+						<li><img src="./img/icones/velocidade.svg" width="32" height="32" alt="" />50 km/h</li>
+						<li><img src="./img/icones/rastreador.svg" width="32" height="32" alt="" />Rastreador</li>
 					</ul>
 					<a class="botao seta" href="./bicicletas/nebula.html">Mais Sobre</a>
 				</div>
@@ -131,7 +131,7 @@
 
 		<footer class="footer-bg">
 			<div class="footer container">
-				<img src="./img/bikcraft.svg" alt="Bikcraft" />
+				<img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
 				<div class="footer-contato">
 					<h3 class="font-2-l-b cor-0">Contato</h3>
 
@@ -146,13 +146,13 @@
 
 					<div class="footer-redes">
 						<a href="./">
-							<img src="./img/redes/instagram.svg" alt="Instagram" />
+							<img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram" />
 						</a>
 						<a href="./">
-							<img src="./img/redes/facebook.svg" alt="Facebook" />
+							<img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook" />
 						</a>
 						<a href="./">
-							<img src="./img/redes/youtube.svg" alt="Youtube" />
+							<img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube" />
 						</a>
 					</div>
 				</div>
