--- a/seguros.html
+++ b/seguros.html
@@ -21,7 +21,7 @@
 		<header class="header-bg">
 			<div class="header container">
 				<a href="./">
-					<img src="./img/bikcraft.svg" alt="Bikcraft" />
+					<img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
 				</a>
 
 				<nav aria-label="primaria">
@@ -86,7 +86,7 @@
 				</h2>
 				<ul>
 					<li>
-						<img src="./img/icones/eletrica.svg" alt="" />
+						<img src="./img/icones/eletrica.svg" width="32" height="32" alt="" />
 						<h3 class="font-1-l cor-0">Reparo Elétrico</h3>
 						<p class="font-2-s cor-5">
 							Garantimos o reparo completo do seu motor em caso de falhas.
@@ -94,7 +94,7 @@
 						</p>
 					</li>
 					<li>
-						<img src="./img/icones/carbono.svg" alt="" />
+						<img src="./img/icones/carbono.svg" width="32" height="32" alt="" />
 						<h3 class="font-1-l cor-0">Carbono</h3>
 						<p class="font-2-s cor-5">
 							Nossos quadros são feitos para durar para sempre. Mas caso algo
@@ -102,7 +102,7 @@
 						</p>
 					</li>
 					<li>
-						<img src="./img/icones/sustentavel.svg" alt="" />
+						<img src="./img/icones/sustentavel.svg" width="32" height="32" alt="" />
 						<h3 class="font-1-l cor-0">Sustentável</h3>
 						<p class="font-2-s cor-5">
 							Trabalhamos com a filosofia de desperdício zero. Qualquer parte
@@ -110,7 +110,7 @@
 						</p>
 					</li>
 					<li>
-						<img src="./img/icones/rastreador.svg" alt="" />
+						<img src="./img/icones/rastreador.svg" width="32" height="32" alt="" />
 						<h3 class="font-1-l cor-0">Recuperação</h3>
 						<p class="font-2-s cor-5">
 							Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em
@@ -118,7 +118,7 @@
 						</p>
 					</li>
 					<li>
-						<img src="./img/icones/seguro.svg" alt="" />
+						<img src="./img/icones/seguro.svg" width="32" height="32" alt="" />
 						<h3 class="font-1-l cor-0">Segurança</h3>
 						<p class="font-2-s cor-5">
 							Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu
@@ -126,7 +126,7 @@
 						</p>
 					</li>
 					<li>
-						<img src="./img/icones/velocidade.svg" alt="" />
+						<img src="./img/icones/velocidade.svg" width="32" height="32" alt="" />
 						<h3 class="font-1-l cor-0">Rapidez</h3>
 						<p class="font-2-s cor-5">
 							A sua Bikcraft ficará pronta para uso no mesmo dia, caso você
@@ -196,7 +196,7 @@
 
 		<footer class="footer-bg">
 			<div class="footer container">
-				<img src="./img/bikcraft.svg" alt="Bikcraft" />
+				<img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
 				<div class="footer-contato">
 					<h3 class="font-2-l-b cor-0">Contato</h3>
 
@@ -211,13 +211,13 @@
 
 					<div class="footer-redes">
 						<a href="./">
-							<img src="./img/redes/instagram.svg" alt="Instagram" />
+							<img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram" />
 						</a>
 						<a href="./">
-							<img src="./img/redes/facebook.svg" alt="Facebook" />
+							<img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook" />
 						</a>
 						<a href="./">
-							<img src="./img/redes/youtube.svg" alt="Youtube" />
+							<img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube" />
 						</a>
 					</div>
 				</div>
