--- a/termos.html
+++ b/termos.html
@@ -23,7 +23,7 @@
 		<header class="header-bg">
 			<div class="header container">
 				<a href="./">
-					<img src="./img/bikcraft.svg" alt="Bikcraft" />
+					<img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
 				</a>
 
 				<nav aria-label="primaria">
@@ -59,14 +59,6 @@
     </main>
 
 
-
-
-
-
-
-
-
-
 		<footer class="footer-bg">
 			<div class="footer container">
 				<img src="./img/bikcraft.svg" alt="Bikcraft" />
@@ -84,13 +76,13 @@
 
 					<div class="footer-redes">
 						<a href="./">
-							<img src="./img/redes/instagram.svg" alt="Instagram" />
+							<img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram" />
 						</a>
 						<a href="./">
-							<img src="./img/redes/facebook.svg" alt="Facebook" />
+							<img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook" />
 						</a>
 						<a href="./">
-							<img src="./img/redes/youtube.svg" alt="Youtube" />
+							<img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube" />
 						</a>
 					</div>
 				</div>
