:zap: perf: Otimizado as imagens da pagina da Magic Might.

--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -19,7 +19,7 @@
 		<header class="header-bg">
 			<div class="header container">
 				<a href="../">
-					<img src="../img/bikcraft.svg" alt="Bikcraft" />
+					<img src="../img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
 				</a>
 
 				<nav aria-label="primaria">
@@ -45,13 +45,13 @@
 			<div class="bicicleta container">
 				<div class="bicicleta-imagens">
 					<a href="./magic.html">
-						<img src="../img/bicicleta/nimbus2.jpg" alt="" />
+						<img src="../img/bicicleta/nimbus2.jpg" width="1120" height="880" alt="" />
 					</a>
 					<a href="./nimbus.html">
-						<img src="../img/bicicleta/nimbus1.jpg" alt=""
+						<img src="../img/bicicleta/nimbus1.jpg" width="1120" height="880" alt=""
 					/></a>
 					<a href="./nebula.html">
-						<img src="../img/bicicleta/nimbus3.jpg" alt=""
+						<img src="../img/bicicleta/nimbus3.jpg" width="1120" height="880" alt=""
 					/></a>
 				</div>
 				<div class="bicicleta-conteudo">
@@ -63,11 +63,11 @@
 					<div class="bicicleta-comprar">
 						<a class="botao" href="../orcamento.html">Comprar Agora</a>
 						<span class="font-2-xs cor-6"
-							><img src="../img/icones/entrega.svg" alt="" /> entrega em 5
+							><img src="../img/icones/entrega.svg" width="16" height="16" alt="" /> entrega em 5
 							dias</span
 						>
 						<span class="font-2-xs cor-6"
-							><img src="../img/icones/estoque.svg" alt="" /> 18 em
+							><img src="../img/icones/estoque.svg" width="16" height="16" alt="" /> 18 em
 							estoque</span
 						>
 					</div>
@@ -75,28 +75,28 @@
 					<h2 class="font-1-xs cor-0">Informações</h2>
 					<ul class="bicicleta-informacoes">
 						<li>
-							<img src="../img/icones/eletrica.svg" alt="" />
+							<img src="../img/icones/eletrica.svg" width="32" height="32" alt="" />
 							<h3 class="font-1-m cor-0">Motor Elétrico</h3>
 							<p class="font-2-xs cor-5">
 								Permite você viajar distâncias inimaginaveis com a sua bike.
 							</p>
 						</li>
 						<li>
-							<img src="../img/icones/velocidade.svg" alt="" />
+							<img src="../img/icones/velocidade.svg" width="32" height="32" alt="" />
 							<h3 class="font-1-m cor-0">45 km/h</h3>
 							<p class="font-2-xs cor-5">
 								A mais rápida bicicleta elétrica disponível hoje no mercado.
 							</p>
 						</li>
 						<li>
-							<img src="../img/icones/rastreador.svg" alt="" />
+							<img src="../img/icones/rastreador.svg" width="32" height="32" alt="" />
 							<h3 class="font-1-m cor-0">Rastreador</h3>
 							<p class="font-2-xs cor-5">
 								Rastreador e sistema anti-furto para garantir o seu sossego.
 							</p>
 						</li>
 						<li>
-							<img src="../img/icones/carbono.svg" alt="" />
+							<img src="../img/icones/carbono.svg" width="32" height="32" alt="" />
 							<h3 class="font-1-m cor-0">Fibra de Carbono</h3>
 							<p class="font-2-xs cor-5">
 								Maior proteção possível para a sua Bikcraft com fibra de
@@ -124,14 +124,14 @@
 			<ul>
 				<li>
 					<a href="./nimbus.html">
-						<img src="../img/bicicletas/nimbus.jpg" alt="Bicicleta preta" />
+						<img src="../img/bicicletas/nimbus.jpg" width="1120" height="680" alt="Bicicleta preta" />
 						<h3 class="font-1-xl">Nimbus Stark</h3>
 						<span class="font-2-m cor-8">R$ 2499</span>
 					</a>
 				</li>
 				<li>
 					<a href="./nebula.html">
-						<img src="../img/bicicletas/nebula.jpg" alt="Bicicleta preta" />
+						<img src="../img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bicicleta preta" />
 						<h3 class="font-1-xl">Nebula Cosmic</h3>
 						<span class="font-2-m cor-8">R$ 3999</span>
 					</a>
@@ -144,6 +144,8 @@
 				<div class="seguro-imagem">
 					<img
 						src="../img/fotos/seguros.jpg"
+						width="1360"
+						height="1512"
 						alt="Pessoa parada em cima de uma bicicleta."
 					/>
 				</div>
@@ -163,7 +165,7 @@
 
 		<footer class="footer-bg">
 			<div class="footer container">
-				<img src="../img/bikcraft.svg" alt="Bikcraft" />
+				<img src="../img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
 				<div class="footer-contato">
 					<h3 class="font-2-l-b cor-0">Contato</h3>
 
@@ -178,13 +180,13 @@
 
 					<div class="footer-redes">
 						<a href="../">
-							<img src="../img/redes/instagram.svg" alt="Instagram" />
+							<img src="../img/redes/instagram.svg" width="32" height="32" alt="Instagram" />
 						</a>
 						<a href="./">
-							<img src="../img/redes/facebook.svg" alt="Facebook" />
+							<img src="../img/redes/facebook.svg" width="32" height="32" alt="Facebook" />
 						</a>
 						<a href="./">
-							<img src="../img/redes/youtube.svg" alt="Youtube" />
+							<img src="../img/redes/youtube.svg" width="32" height="32" alt="Youtube" />
 						</a>
 					</div>
 				</div>
