--- a/index.html
+++ b/index.html
@@ -253,5 +253,7 @@
 				</p>
 			</div>
 		</footer>
+		<script src="./js/scripts.js"></script>
+			<script src="./js/scripts.js"></script>
 	</body>
 </html>
