:sparkles: feat: Adicionado dinamicidade aos itens do orçamento

--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -45,13 +45,13 @@
 			<div class="bicicleta container">
 				<div class="bicicleta-imagens">
 					<a href="./magic.html">
-						<img src="../img/bicicleta/nimbus2.jpg" width="1120" height="880" alt="" />
+						<img src="../img/bicicleta/nimbus2.jpg" width="1120" height="880" alt="Bicicleta 2" />
 					</a>
 					<a href="./nimbus.html">
-						<img src="../img/bicicleta/nimbus1.jpg" width="1120" height="880" alt=""
+						<img src="../img/bicicleta/nimbus1.jpg" width="1120" height="880" alt="Bicicleta 1"
 					/></a>
 					<a href="./nebula.html">
-						<img src="../img/bicicleta/nimbus3.jpg" width="1120" height="880" alt=""
+						<img src="../img/bicicleta/nimbus3.jpg" width="1120" height="880" alt="Bicicleta 3"
 					/></a>
 				</div>
 				<div class="bicicleta-conteudo">
@@ -61,7 +61,7 @@
 						velocidade.
 					</p>
 					<div class="bicicleta-comprar">
-						<a class="botao" href="../orcamento.html">Comprar Agora</a>
+						<a class="botao" href="../orcamento.html?tipo=bikcraft&produto=magic">Comprar Agora</a>
 						<span class="font-2-xs cor-6"
 							><img src="../img/icones/entrega.svg" width="16" height="16" alt="" /> entrega em 5
 							dias</span
