--- a/seguros.html
+++ b/seguros.html
@@ -6,7 +6,7 @@
 		<title>Seguros | Bikcraft</title>
 		<meta name="description" content="Seguros da Bikcraft" />
 
-		<link rel="preload" href="./css/styles.css" as="style">
+		<link rel="preload" href="./css/styles.css" as="style" />
 		<link rel="stylesheet" href="./css/styles.css" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,7 +21,12 @@
 		<header class="header-bg">
 			<div class="header container">
 				<a href="./">
-					<img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
+					<img
+						src="./img/bikcraft.svg"
+						width="136"
+						height="32"
+						alt="Bikcraft"
+					/>
 				</a>
 
 				<nav aria-label="primaria">
@@ -57,7 +62,11 @@
 						<li>Suporte 08h às 18h</li>
 						<li>Cobertura estadual</li>
 					</ul>
-					<a class="botao secundario" href="/orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
+					<a
+						class="botao secundario"
+						href="/orcamento.html?tipo=seguro&produto=prata"
+						>Inscreva-se</a
+					>
 				</div>
 
 				<div class="seguros-item">
@@ -74,7 +83,9 @@
 						<li>Desconto em parceiros</li>
 						<li>Acesso ao Clube Bikcraft</li>
 					</ul>
-					<a class="botao" href="/orcamento.html?tipo=seguro&produto=ouro">Inscreva-se</a>
+					<a class="botao" href="/orcamento.html?tipo=seguro&produto=ouro"
+						>Inscreva-se</a
+					>
 				</div>
 			</div>
 		</main>
@@ -86,7 +97,12 @@
 				</h2>
 				<ul>
 					<li>
-						<img src="./img/icones/eletrica.svg" width="32" height="32" alt="" />
+						<img
+							src="./img/icones/eletrica.svg"
+							width="32"
+							height="32"
+							alt=""
+						/>
 						<h3 class="font-1-l cor-0">Reparo Elétrico</h3>
 						<p class="font-2-s cor-5">
 							Garantimos o reparo completo do seu motor em caso de falhas.
@@ -102,7 +118,12 @@
 						</p>
 					</li>
 					<li>
-						<img src="./img/icones/sustentavel.svg" width="32" height="32" alt="" />
+						<img
+							src="./img/icones/sustentavel.svg"
+							width="32"
+							height="32"
+							alt=""
+						/>
 						<h3 class="font-1-l cor-0">Sustentável</h3>
 						<p class="font-2-s cor-5">
 							Trabalhamos com a filosofia de desperdício zero. Qualquer parte
@@ -110,7 +131,12 @@
 						</p>
 					</li>
 					<li>
-						<img src="./img/icones/rastreador.svg" width="32" height="32" alt="" />
+						<img
+							src="./img/icones/rastreador.svg"
+							width="32"
+							height="32"
+							alt=""
+						/>
 						<h3 class="font-1-l cor-0">Recuperação</h3>
 						<p class="font-2-s cor-5">
 							Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em
@@ -126,7 +152,12 @@
 						</p>
 					</li>
 					<li>
-						<img src="./img/icones/velocidade.svg" width="32" height="32" alt="" />
+						<img
+							src="./img/icones/velocidade.svg"
+							width="32"
+							height="32"
+							alt=""
+						/>
 						<h3 class="font-1-l cor-0">Rapidez</h3>
 						<p class="font-2-s cor-5">
 							A sua Bikcraft ficará pronta para uso no mesmo dia, caso você
@@ -144,48 +175,96 @@
 
 			<dl>
 				<div>
-					<dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-					<dd class="font-2-s cor-9">
+					<dt>
+						<button
+							class="font-1-m-b"
+							aria-controls="pergunta1"
+							aria-expanded="true"
+						>
+							Qual forma de pagamento vocês aceitam?
+						</button>
+					</dt>
+					<dd id="pergunta1" class="font-2-s cor-9 ativa">
 						Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
 						pagamentos à vista também aceitarmos PIX e Boleto através do
 						PagSeguro.
 					</dd>
 				</div>
 				<div>
-					<dt class="font-1-m-b">Como posso entrar em contato?</dt>
-					<dd class="font-2-s cor-9">
+					<dt>
+						<button
+							class="font-1-m-b"
+							aria-controls="pergunta2"
+							aria-expanded="false"
+						>
+							Como posso entrar em contato?
+						</button>
+					</dt>
+					<dd id="pergunta2" class="font-2-s cor-9">
 						Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
 						pagamentos à vista também aceitarmos PIX e Boleto através do
 						PagSeguro.
 					</dd>
 				</div>
 				<div>
-					<dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
-					<dd class="font-2-s cor-9">
+					<dt>
+						<button
+							class="font-1-m-b"
+							aria-controls="pergunta3"
+							aria-expanded="false"
+						>
+							Vocês possuem algum desconto?
+						</button>
+					</dt>
+					<dd id="pergunta3" class="font-2-s cor-9">
 						Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
 						pagamentos à vista também aceitarmos PIX e Boleto através do
 						PagSeguro.
 					</dd>
 				</div>
 				<div>
-					<dt class="font-1-m-b">Qual a garantia que possuo?</dt>
-					<dd class="font-2-s cor-9">
+					<dt>
+						<button
+							class="font-1-m-b"
+							aria-controls="pergunta4"
+							aria-expanded="false"
+						>
+							Qual a garantia que possuo?
+						</button>
+					</dt>
+					<dd id="pergunta4" class="font-2-s cor-9">
 						Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
 						pagamentos à vista também aceitarmos PIX e Boleto através do
 						PagSeguro.
 					</dd>
 				</div>
 				<div>
-					<dt class="font-1-m-b">Posso parcelar no boleto?</dt>
-					<dd class="font-2-s cor-9">
+					<dt>
+						<button
+							class="font-1-m-b"
+							aria-controls="pergunta5"
+							aria-expanded="false"
+						>
+							Posso parcelar no boleto?
+						</button>
+					</dt>
+					<dd id="pergunta5" class="font-2-s cor-9">
 						Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
 						pagamentos à vista também aceitarmos PIX e Boleto através do
 						PagSeguro.
 					</dd>
 				</div>
 				<div>
-					<dt class="font-1-m-b">Quantas trocas posso fazer ao ano?</dt>
-					<dd class="font-2-s cor-9">
+					<dt>
+						<button
+							class="font-1-m-b"
+							aria-controls="pergunta6"
+							aria-expanded="false"
+						>
+							Quantas trocas posso fazer ao ano?
+						</button>
+					</dt>
+					<dd id="pergunta6" class="font-2-s cor-9">
 						Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
 						pagamentos à vista também aceitarmos PIX e Boleto através do
 						PagSeguro.
@@ -211,13 +290,28 @@
 
 					<div class="footer-redes">
 						<a href="./">
-							<img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram" />
+							<img
+								src="./img/redes/instagram.svg"
+								width="32"
+								height="32"
+								alt="Instagram"
+							/>
 						</a>
 						<a href="./">
-							<img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook" />
+							<img
+								src="./img/redes/facebook.svg"
+								width="32"
+								height="32"
+								alt="Facebook"
+							/>
 						</a>
 						<a href="./">
-							<img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube" />
+							<img
+								src="./img/redes/youtube.svg"
+								width="32"
+								height="32"
+								alt="Youtube"
+							/>
 						</a>
 					</div>
 				</div>
@@ -237,6 +331,6 @@
 				</p>
 			</div>
 		</footer>
-			<script src="./js/scripts.js"></script>
+		<script src="./js/scripts.js"></script>
 	</body>
 </html>
