--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 		<header class="header-bg">
 			<div class="header container">
 				<a href="./">
-					<img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
+					<img
+						src="./img/bikcraft.svg"
+						width="136"
+						height="32"
+						alt="Bikcraft"
+					/>
 				</a>
 
 				<nav aria-label="primaria">
@@ -39,17 +44,20 @@
 		<main class="introducao-bg">
 			<div class="introducao container">
 				<div class="introducao-conteudo">
-					<h1 class="font-1-xxl cor-0">
+					<h1 class="font-1-xxl cor-0 fadeInLeft" data-anime="200">
 						Bicicletas feitas sob medida<span class="cor-p1">.</span>
 					</h1>
-					<p class="font-2-l cor-5">
+					<p class="font-2-l cor-5 fadeInLeft" data-anime="400">
 						Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
 						para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
 					</p>
-					<a class="botao" href="./bicicletas.html">Escolha a sua</a>
+					<a class="botao fadeInLeft" href="./bicicletas.html" data-anime="600">Escolha a sua</a>
 				</div>
-				<picture>
-					<source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg">
+				<picture data-anime="800" class="fadeInRight">
+					<source
+						media="(max-width: 800px)"
+						srcset="./img/bicicletas/nimbus.jpg"
+					/>
 					<img
 						src="./img/fotos/introducao.jpg"
 						alt="Bicicleta elétrica preta."
@@ -68,21 +76,36 @@
 			<ul>
 				<li>
 					<a href="./bicicletas/magic.html">
-						<img src="./img/bicicletas/magic-home.jpg" width="920" height="1040" alt="Bicicleta preta" />
+						<img
+							src="./img/bicicletas/magic-home.jpg"
+							width="920"
+							height="1040"
+							alt="Bicicleta preta"
+						/>
 						<h3 class="font-1-xl">Magic Might</h3>
 						<span class="font-2-m cor-8">R$ 2499</span>
 					</a>
 				</li>
 				<li>
 					<a href="./bicicletas/nimbus.html">
-						<img src="./img/bicicletas/nimbus-home.jpg" width="920" height="1040" alt="Bicicleta preta" />
+						<img
+							src="./img/bicicletas/nimbus-home.jpg"
+							width="920"
+							height="1040"
+							alt="Bicicleta preta"
+						/>
 						<h3 class="font-1-xl">Nimbus Stark</h3>
 						<span class="font-2-m cor-8">R$ 4999</span>
 					</a>
 				</li>
 				<li>
 					<a href="./bicicletas/nebula.html">
-						<img src="./img/bicicletas/nebula-home.jpg" width="920" height="1040" alt="Bicicleta preta" />
+						<img
+							src="./img/bicicletas/nebula-home.jpg"
+							width="920"
+							height="1040"
+							alt="Bicicleta preta"
+						/>
 						<h3 class="font-1-xl">Nebula Cosmic</h3>
 						<span class="font-2-m cor-8">R$ 3999</span>
 					</a>
@@ -109,7 +132,12 @@
 
 					<div class="tecnologia-vantagens">
 						<div>
-							<img src="./img/icones/eletrica.svg" width="24" height="24" alt="" />
+							<img
+								src="./img/icones/eletrica.svg"
+								width="24"
+								height="24"
+								alt=""
+							/>
 							<h3 class="font-1-m cor-0">Motor Elétrico</h3>
 							<p class="font-2-s cor-5">
 								Toda Bikcraft é equipada com um motor elétrico que possui
@@ -118,7 +146,12 @@
 							</p>
 						</div>
 						<div>
-							<img src="./img/icones/rastreador.svg" width="24" height="24" alt="" />
+							<img
+								src="./img/icones/rastreador.svg"
+								width="24"
+								height="24"
+								alt=""
+							/>
 							<h3 class="font-1-m cor-0">Rastreador</h3>
 							<p class="font-2-s cor-5">
 								Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos
@@ -129,7 +162,12 @@
 				</div>
 
 				<div class="tecnologia-imagem">
-					<img src="./img/fotos/tecnologia.jpg" width="1200" height="1920" alt="" />
+					<img
+						src="./img/fotos/tecnologia.jpg"
+						width="1200"
+						height="1920"
+						alt=""
+					/>
 				</div>
 			</div>
 		</article>
@@ -140,14 +178,70 @@
 			</h2>
 
 			<ul>
-				<li><img src="./img/parceiros/caravan.svg" width="140" height="38" alt="caravan" /></li>
-				<li><img src="./img/parceiros/ranek.svg" width="149" height="36" alt="ranek" /></li>
-				<li><img src="./img/parceiros/handel.svg" width="139" height="50" alt="handel" /></li>
-				<li><img src="./img/parceiros/dogs.svg" width="152" height="39" alt="dogs" /></li>
-				<li><img src="./img/parceiros/lescone.svg" width="208" height="41" alt="lescone" /></li>
-				<li><img src="./img/parceiros/flexblog.svg" width="165" height="38" alt="flexblog" /></li>
-				<li><img src="./img/parceiros/wildbeast.svg" width="196" height="34"  alt="wildbeast" /></li>
-				<li><img src="./img/parceiros/surfbot.svg" width="200" height="49"  alt="surfbot" /></li>
+				<li>
+					<img
+						src="./img/parceiros/caravan.svg"
+						width="140"
+						height="38"
+						alt="caravan"
+					/>
+				</li>
+				<li>
+					<img
+						src="./img/parceiros/ranek.svg"
+						width="149"
+						height="36"
+						alt="ranek"
+					/>
+				</li>
+				<li>
+					<img
+						src="./img/parceiros/handel.svg"
+						width="139"
+						height="50"
+						alt="handel"
+					/>
+				</li>
+				<li>
+					<img
+						src="./img/parceiros/dogs.svg"
+						width="152"
+						height="39"
+						alt="dogs"
+					/>
+				</li>
+				<li>
+					<img
+						src="./img/parceiros/lescone.svg"
+						width="208"
+						height="41"
+						alt="lescone"
+					/>
+				</li>
+				<li>
+					<img
+						src="./img/parceiros/flexblog.svg"
+						width="165"
+						height="38"
+						alt="flexblog"
+					/>
+				</li>
+				<li>
+					<img
+						src="./img/parceiros/wildbeast.svg"
+						width="196"
+						height="34"
+						alt="wildbeast"
+					/>
+				</li>
+				<li>
+					<img
+						src="./img/parceiros/surfbot.svg"
+						width="200"
+						height="49"
+						alt="surfbot"
+					/>
+				</li>
 			</ul>
 		</section>
 
@@ -155,7 +249,8 @@
 			<div>
 				<img
 					src="./img/fotos/depoimento.jpg"
-					width="1560" height="1360" 
+					width="1560"
+					height="1360"
 					alt="Pessoa pedalando uma bicicleta Bikcraft"
 				/>
 			</div>
@@ -227,13 +322,28 @@
 
 					<div class="footer-redes">
 						<a href="./">
-							<img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram" />
+							<img
+								src="./img/redes/instagram.svg"
+								width="32"
+								height="32"
+								alt="Instagram"
+							/>
 						</a>
 						<a href="./">
-							<img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook" />
+							<img
+								src="./img/redes/facebook.svg"
+								width="32"
+								height="32"
+								alt="Facebook"
+							/>
 						</a>
 						<a href="./">
-							<img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube" />
+							<img
+								src="./img/redes/youtube.svg"
+								width="32"
+								height="32"
+								alt="Youtube"
+							/>
 						</a>
 					</div>
 				</div>
@@ -253,7 +363,7 @@
 				</p>
 			</div>
 		</footer>
+		<script src="./js/plugins/simple-anime.js"></script>
 		<script src="./js/scripts.js"></script>
-			<script src="./js/scripts.js"></script>
 	</body>
 </html>
