--- a/seguros.html
+++ b/seguros.html
@@ -41,7 +41,7 @@
 
 		<main class="seguros-bg">
 			<div class="titulo-bg">
-				<div class="titulo container">
+				<div class="titulo container fadeInDown" data-anime="200">
 					<p class="font-2-l-b cor-5">Escolha o seguro</p>
 					<h1 class="font-1-xxl cor-0">
 						você seguro<span class="cor-p1">.</span>
@@ -50,7 +50,7 @@
 			</div>
 
 			<div class="seguros container">
-				<div class="seguros-item">
+				<div class="seguros-item fadeInLeft" data-anime="400">
 					<h3 class="font-1-xl cor-6">PRATA</h3>
 					<span class="font-1-xl cor-0"
 						>R$ 199 <span class="font-1-xs cor-6">mensal</span></span
@@ -69,7 +69,7 @@
 					>
 				</div>
 
-				<div class="seguros-item">
+				<div class="seguros-item fadeInRight" data-anime="600">
 					<h3 class="font-1-xl cor-p1">OURO</h3>
 					<span class="font-1-xl cor-0"
 						>R$ 299 <span class="font-1-xs cor-6">mensal</span></span
@@ -331,6 +331,7 @@
 				</p>
 			</div>
 		</footer>
+		<script src="./js/plugins/simple-anime.js"></script>
 		<script src="./js/scripts.js"></script>
 	</body>
 </html>
