:recycle: feat: adicionado uma classe caso js esteja desativado

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 			href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
 			rel="stylesheet"
 		/>
+		<script>
+			document.documentElement.classList.add('js');
+		</script>
 	</head>
 	<body>
 		<header class="header-bg">
@@ -51,7 +54,9 @@
 						Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
 						para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
 					</p>
-					<a class="botao fadeInLeft" href="./bicicletas.html" data-anime="600">Escolha a sua</a>
+					<a class="botao fadeInLeft" href="./bicicletas.html" data-anime="600"
+						>Escolha a sua</a
+					>
 				</div>
 				<picture data-anime="800" class="fadeInRight">
 					<source
