--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -6,7 +6,8 @@
 		<title>Magic Might | Bikcraft</title>
 		<meta name="description" content="Termos e Condições" />
 
-		<link rel="stylesheet" href="../css/styles.css" />
+		<link rel="stylesheet" href="../css/styles.min.css" />
+		<link rel="icon" href="../favicon.svg" type="image/svg+xml">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
