--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 			name="description"
 			content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
 		/>
-
-		<link rel="preload" href="./css/styles.css" as="style" />
-		<link rel="stylesheet" href="./css/styles.css" />
+		
+		<link rel="icon" href="./favicon.svg" type="image/svg+xml">
+		<link rel="preload" href="./css/styles.min.css" as="style" />
+		<link rel="stylesheet" href="./css/styles.min.css" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
