--- a/seguros.html
+++ b/seguros.html
@@ -6,8 +6,9 @@
 		<title>Seguros | Bikcraft</title>
 		<meta name="description" content="Seguros da Bikcraft" />
 
-		<link rel="preload" href="./css/styles.css" as="style" />
-		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="icon" href="./favicon.svg" type="image/svg+xml">
+		<link rel="preload" href="./css/styles.min.css" as="style" />
+		<link rel="stylesheet" href="./css/styles.min.css" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
